2025-08-26 ФЗ-6: Выполнение ФЗ для 6 спринта. Начальная версия.